<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/action_dashboard">

    <fragment
        android:id="@+id/action_avatar"
        android:name="com.example.dispatcher.ui.main.bottomNavigation.account.AccountFragment"
        android:label="@string/menu_user_avatar"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/action_dashboard"
        android:name="com.example.dispatcher.ui.main.bottomNavigation.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/action_favourite"
        android:name="com.example.dispatcher.ui.main.bottomNavigation.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />
</navigation>