<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/splash_screen">

    <fragment
        android:id="@+id/splash_screen"
        android:name="com.example.dispatcher.view.fragments.SplashScreenFragment"
        android:label="@string/splash_screen"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/action_splash_screen_to_login_fragment"
            app:destination="@id/login_fragment" />
        <action
            android:id="@+id/action_splash_screen_to_main_fragment"
            app:destination="@id/main_fragment" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.dispatcher.view.fragments.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_fragment_to_main_fragment"
            app:destination="@id/main_fragment" />
        <action
            android:id="@+id/action_login_fragment_to_signup_fragment"
            app:destination="@id/signup_fragment" />
    </fragment>

    <fragment
        android:id="@+id/signup_fragment"
        android:name="com.example.dispatcher.view.fragments.SignupFragment"
        android:label="@string/signup_fragment"
        tools:layout="@layout/fragment_signup" >
        <action
            android:id="@+id/action_signup_fragment_to_main_fragment"
            app:destination="@id/main_fragment" />
    </fragment>

    <fragment
        android:id="@+id/main_fragment"
        android:name="com.example.dispatcher.view.main.MainFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/fragment_main" />

</navigation>