<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SignupFragment"
    android:background="@color/secondary_color"
    android:orientation="vertical">

    <include layout="@layout/view_authentication"/>

    <TextView
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_fragment"
        android:textColor="@color/body_text_color"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp"
        android:textSize="14sp"
        android:text="@string/button_signup"
        android:textColor="@color/on_secondary_color"
        android:backgroundTint="@color/button_color"
        android:background="@drawable/rounded_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp"
        android:textSize="14sp"
        android:text="@string/button_login"
        android:textColor="@color/body_text_color"
        android:backgroundTint="@color/secondary_button_color"
        android:background="@drawable/rounded_button"/>

</LinearLayout>
